// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalListFilters /> should render correctly 1`] = `
<div
  className="mb-15 mt-30"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(InjectIntl(ProposalListToggleViewBtn))
        onChange={[Function]}
        showMapButton={false}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(InjectIntl(ProposalListSearch)) />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="proposal-filter-sorting"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(InjectIntl(ProposalListOrderSorting))
        defaultSort="random"
        orderByComments={true}
        orderByCost={true}
        orderByVotes={false}
      />
    </Col>
  </Row>
</div>
`;

exports[`<ProposalListFilters /> should render correctly with filters 1`] = `
<div
  className="mb-15 mt-30"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(InjectIntl(ProposalListToggleViewBtn))
        onChange={[Function]}
        showMapButton={false}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(InjectIntl(ProposalListSearch)) />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="proposal-filter-sorting"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <Connect(InjectIntl(ProposalListOrderSorting))
        defaultSort="random"
        orderByComments={true}
        orderByCost={true}
        orderByVotes={false}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="proposal-filter-types"
      key="0"
      lg={3}
      md={4}
      sm={6}
      xs={12}
    >
      <FormattedMessage
        id="global.select_types"
        values={Object {}}
      >
        <Component />
      </FormattedMessage>
    </Col>
  </Row>
</div>
`;
